force-app/main/default/objects/New_Customer_Implementation__c/New_Customer_Implementation__c.object-meta.xml
<CustomObject>
    <description>Child object to Account tracking the implementation steps for new customers.</description>
    <label>New Customer Implementation</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Unique ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>New Customer Implementation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>