force-app/main/default/objects/New_Customer_Implementation__c/fields/Contract_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Contract_Agreement__c</fullName>
    <formula>HYPERLINK(&quot;/&quot;&amp;Contract_Req_or_Agreement_Id__c, &quot;Contract/Agreement&quot;,&quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contract/Agreement</label>
    <type>Text</type>
</CustomField>