force-app/main/default/objects/New_Customer_Implementation__c/fields/Contract_Declined__c.field-meta.xml
<CustomField>
    <fullName>Contract_Declined__c</fullName>
    <inlineHelpText>Used to identify contracts that customers decided not to sign</inlineHelpText>
    <label>Contract Declined</label>
    <type>Date</type>
</CustomField>