force-app/main/default/objects/New_Customer_Implementation__c/fields/contract_Fully_Executed_Date__c.field-meta.xml
<CustomField>
    <fullName>contract_Fully_Executed_Date__c</fullName>
    <description>Date that the contract has been signed by both the customer and Qualcomm.</description>
    <label>Contract Fully Executed Date</label>
    <type>Date</type>
</CustomField>