force-app/main/default/objects/New_Customer_Implementation__c/fields/Contract_Req_or_Agreement_Id__c.field-meta.xml
<CustomField>
    <fullName>Contract_Req_or_Agreement_Id__c</fullName>
    <description>18 character record ID for either a Contract_Request__c or a SIGN_Agreement__c</description>
    <label>Contract Req or Agreement Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>