force-app/main/default/objects/New_Customer_Implementation__c/fields/contractRequestDate__c.field-meta.xml
<CustomField>
    <fullName>contractRequestDate__c</fullName>
    <label>Contract Request Date</label>
    <type>Date</type>
</CustomField>