force-app/main/default/objects/New_Customer_Implementation__c/fields/contractRequestDuration__c.field-meta.xml
<CustomField>
    <fullName>contractRequestDuration__c</fullName>
    <formula>IF (ISNULL(contractRequestDate__c), null, IF (ISNULL(contract_Fully_Executed_Date__c), Today() - contractRequestDate__c, contract_Fully_Executed_Date__c - contractRequestDate__c))</formula>
    <label>Contracts Duration (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>