force-app/main/default/objects/New_Customer_Implementation__c/fields/contractRequestStatus__c.field-meta.xml
<CustomField>
    <fullName>contractRequestStatus__c</fullName>
    <description>The status of the contract request.  A duration more than 14 calendar days is red-flagged.</description>
    <formula>IF (ISNULL(contractRequestDuration__c), &quot;&quot;, IF (contractRequestDuration__c &gt; 14, IMAGE(&quot;/img/samples/light_red.gif&quot;,&quot;Red&quot;), IMAGE(&quot;/img/samples/light_green.gif&quot;, &quot;Green&quot;)))</formula>
    <label>Contracts Status</label>
    <type>Text</type>
</CustomField>