force-app/main/default/objects/New_Customer_Implementation__c/fields/contractToShipDuration__c.field-meta.xml
<CustomField>
    <fullName>contractToShipDuration__c</fullName>
    <formula>IF (ISNULL(contractRequestDate__c), null, IF (ISNULL(shippedDate__c), Today() -  contractRequestDate__c , shippedDate__c - contractRequestDate__c))</formula>
    <label>Contract to Ship Duration (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>