force-app/main/default/objects/New_Customer_Implementation__c/fields/contractToShipStatus__c.field-meta.xml
<CustomField>
    <fullName>contractToShipStatus__c</fullName>
    <description>The status of the new customer implementation.  A duration of more than 28 calendar days from contract request to 1st shipment is red-flagged.</description>
    <formula>IF(ISPICKVAL(currentStage__c, &quot;1-Contract Requested&quot;), IF (contractToShipDuration__c &gt; 14, IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;Red&quot;), IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;Green&quot;)), IF(ISPICKVAL(currentStage__c, &quot;2-Contract Fully Executed&quot;), IF (contractToShipDuration__c &gt; 17, IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;Red&quot;), IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;Green&quot;)), IF(ISPICKVAL(currentStage__c, &quot;3-Customer Fully Setup and Ready for Orders&quot;),IF (contractToShipDuration__c &gt; 24, IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;Red&quot;), IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;Green&quot;)),  IF(ISPICKVAL(currentStage__c, &quot;4-Order Placed&quot;), IF (contractToShipDuration__c &gt; 28, IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;Red&quot;), IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;Green&quot;)), IF(OR(ISPICKVAL(currentStage__c, &quot;5-First Shipment Complete&quot;), ISPICKVAL(currentStage__c, &quot;6-First Message Received&quot;)), IF (contractToShipDuration__c &gt;= 28, IMAGE(&quot;/img/samples/flag_red.gif&quot;,&quot;Red&quot;), IMAGE(&quot;/img/samples/flag_green.gif&quot;,&quot;Green&quot;)),  &quot;Unknown &apos;Current Stage&apos; value in &apos;Contract to Ship Status&apos; Formula&quot;)))))</formula>
    <label>Contract to Ship Status</label>
    <type>Text</type>
</CustomField>