force-app/main/default/objects/New_Customer_Implementation__c/fields/currentStage__c.field-meta.xml
<CustomField>
    <fullName>currentStage__c</fullName>
    <label>Current Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1-Contract Requested</fullName>
            </value>
            <value>
                <fullName>2-Contract Fully Executed</fullName>
            </value>
            <value>
                <fullName>3-Customer Fully Setup and Ready for Orders</fullName>
            </value>
            <value>
                <fullName>4-Order Placed</fullName>
            </value>
            <value>
                <fullName>5-First Shipment Complete</fullName>
            </value>
            <value>
                <fullName>6-First Message Received</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>