force-app/main/default/objects/New_Customer_Implementation__c/fields/Customer_Fully_Setup__c.field-meta.xml
<CustomField>
    <fullName>Customer_Fully_Setup__c</fullName>
    <description>The customer is fully setup (Oracle, NMC, Pricing) and ready for orders.</description>
    <label>Customer Fully Setup Date</label>
    <type>Date</type>
</CustomField>