force-app/main/default/objects/New_Customer_Implementation__c/fields/customerNMCSetupCompleteDate__c.field-meta.xml
<CustomField>
    <fullName>customerNMCSetupCompleteDate__c</fullName>
    <label>Customer NMC Setup Complete Date</label>
    <type>Date</type>
</CustomField>