force-app/main/default/objects/New_Customer_Implementation__c/fields/customerSetupDuration__c.field-meta.xml
<CustomField>
    <fullName>customerSetupDuration__c</fullName>
    <formula>IF (ISNULL(contract_Fully_Executed_Date__c), null, IF (ISNULL(Customer_Fully_Setup__c), Today() - contract_Fully_Executed_Date__c , Customer_Fully_Setup__c - contract_Fully_Executed_Date__c))</formula>
    <label>Customer Setup Duration (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>