force-app/main/default/objects/New_Customer_Implementation__c/fields/customerSetupStatus__c.field-meta.xml
<CustomField>
    <fullName>customerSetupStatus__c</fullName>
    <description>The status of the setup of the new customer (Oracle, NMC_Account) after the contract has been signed by Qualcomm.  A duration more than 3 calendar days is red-flagged.</description>
    <formula>IF (ISNULL(customerSetupDuration__c), &quot;&quot;, IF (customerSetupDuration__c &gt; 3, IMAGE(&quot;/img/samples/light_red.gif&quot;,&quot;Red&quot;), IMAGE(&quot;/img/samples/light_green.gif&quot;, &quot;Green&quot;)))</formula>
    <label>Customer Setup Status</label>
    <type>Text</type>
</CustomField>