force-app/main/default/objects/New_Customer_Implementation__c/fields/first_Message_Duration_Status__c.field-meta.xml
<CustomField>
    <fullName>first_Message_Duration_Status__c</fullName>
    <description>The status of when the 1st message is received after 1st shipment.  A duration more than 10 calendar days is red-flagged.</description>
    <formula>IF (ISNULL(firstMessageDuration__c), &quot;&quot;, IF (firstMessageDuration__c &gt; 10, IMAGE(&quot;/img/samples/light_red.gif&quot;,&quot;Red&quot;), IMAGE(&quot;/img/samples/light_green.gif&quot;, &quot;Green&quot;)))</formula>
    <label>First Message Duration Status</label>
    <type>Text</type>
</CustomField>