force-app/main/default/objects/New_Customer_Implementation__c/fields/firstMessageDuration__c.field-meta.xml
<CustomField>
    <fullName>firstMessageDuration__c</fullName>
    <formula>IF (ISNULL(shippedDate__c), null, IF (ISNULL(firstMessageReceivedDate__c), Today() - shippedDate__c, firstMessageReceivedDate__c - shippedDate__c))</formula>
    <label>First Message Duration (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>