force-app/main/default/objects/New_Customer_Implementation__c/fields/firstMessageReceivedDate__c.field-meta.xml
<CustomField>
    <fullName>firstMessageReceivedDate__c</fullName>
    <label>First Message Received Date</label>
    <type>Date</type>
</CustomField>