force-app/main/default/objects/New_Customer_Implementation__c/fields/NMC_Account__c.field-meta.xml
<CustomField>
    <fullName>NMC_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The NMC Account that triggered the Customer Setup date</description>
    <label>NMC Account</label>
    <referenceTo>NMC_Account__c</referenceTo>
    <relationshipLabel>New Customer Implementation</relationshipLabel>
    <relationshipName>R00N50000001eccJEAQ</relationshipName>
    <type>Lookup</type>
</CustomField>