force-app/main/default/objects/New_Customer_Implementation__c/fields/orderDuration__c.field-meta.xml
<CustomField>
    <fullName>orderDuration__c</fullName>
    <formula>IF (ISNULL(Customer_Fully_Setup__c), null, IF (ISNULL(orderPlacedDate__c), Today() - Customer_Fully_Setup__c , orderPlacedDate__c - Customer_Fully_Setup__c))</formula>
    <label>Setup to Order Duration (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>