force-app/main/default/objects/New_Customer_Implementation__c/fields/orderDurationStatus__c.field-meta.xml
<CustomField>
    <fullName>orderDurationStatus__c</fullName>
    <description>The status of the order after the customer has been setup.  This will be red-flagged if the order is not received within 7 calendar days after setup.</description>
    <formula>IF (ISNULL(orderDuration__c), &quot;&quot;, IF (orderDuration__c &gt; 7, IMAGE(&quot;/img/samples/light_red.gif&quot;,&quot;Red&quot;), IMAGE(&quot;/img/samples/light_green.gif&quot;, &quot;Green&quot;)))</formula>
    <label>Setup to Order Status</label>
    <type>Text</type>
</CustomField>