force-app/main/default/objects/New_Customer_Implementation__c/fields/orderPlacedDate__c.field-meta.xml
<CustomField>
    <fullName>orderPlacedDate__c</fullName>
    <label>Order Placed Date</label>
    <type>Date</type>
</CustomField>