force-app/main/default/objects/New_Customer_Implementation__c/fields/percentComplete__c.field-meta.xml
<CustomField>
    <fullName>percentComplete__c</fullName>
    <formula>CASE(currentStage__c, &quot;1-Contract Requested&quot;, 0, &quot;2-Contract Fully Executed&quot;, 20/100, &quot;3-Customer Fully Setup and Ready for Orders&quot;, 40/100, &quot;4-Order Placed&quot;, 60/100, &quot;5-First Shipment Complete&quot;, 80/100, &quot;6-First Message Received&quot;, 100/100,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>% Complete</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>