force-app/main/default/objects/New_Customer_Implementation__c/fields/Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Sales_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The sales order that triggered the Sales Order date</description>
    <label>Sales Order</label>
    <referenceTo>Sales_Order__c</referenceTo>
    <relationshipLabel>New Customer Implementation</relationshipLabel>
    <relationshipName>R00N50000001eccOEAQ</relationshipName>
    <type>Lookup</type>
</CustomField>