force-app/main/default/objects/New_Customer_Implementation__c/fields/Serialized_Unit__c.field-meta.xml
<CustomField>
    <fullName>Serialized_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The unit that triggered the 1st message received date</description>
    <label>Serialized Unit</label>
    <referenceTo>Serialized_Units__c</referenceTo>
    <relationshipLabel>New Customer Implementation</relationshipLabel>
    <relationshipName>R00N50000001eccTEAQ</relationshipName>
    <type>Lookup</type>
</CustomField>