force-app/main/default/objects/New_Customer_Implementation__c/fields/Shipment__c.field-meta.xml
<CustomField>
    <fullName>Shipment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The shipment record that triggered the Shipped date</description>
    <label>Shipment</label>
    <referenceTo>Shipment__c</referenceTo>
    <relationshipLabel>New Customer Implementation</relationshipLabel>
    <relationshipName>R00N50000001eccYEAQ</relationshipName>
    <type>Lookup</type>
</CustomField>