force-app/main/default/objects/New_Customer_Implementation__c/fields/Shipment_Line__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The shipment line record that triggered the Shipped date</description>
    <label>Shipment Line</label>
    <referenceTo>Shipment_Line__c</referenceTo>
    <relationshipLabel>New Customer Implementation</relationshipLabel>
    <relationshipName>R00N50000001tDBbEAM</relationshipName>
    <type>Lookup</type>
</CustomField>