force-app/main/default/objects/New_Customer_Implementation__c/fields/shippedDate__c.field-meta.xml
<CustomField>
    <fullName>shippedDate__c</fullName>
    <description>Order Fulfilled Date</description>
    <label>Shipped Date</label>
    <type>Date</type>
</CustomField>