force-app/main/default/objects/New_Customer_Implementation__c/fields/shippingDuration__c.field-meta.xml
<CustomField>
    <fullName>shippingDuration__c</fullName>
    <formula>IF (ISNULL(orderPlacedDate__c), null, IF (ISNULL(shippedDate__c), Today() -  orderPlacedDate__c , shippedDate__c - orderPlacedDate__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Shipping Duration (days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>