force-app/main/default/objects/New_Customer_Implementation__c/fields/shippingDurationStatus__c.field-meta.xml
<CustomField>
    <fullName>shippingDurationStatus__c</fullName>
    <description>The status of the 1st shipment after the order has been received.  A duration more than 4 calendar days is red-flagged.</description>
    <formula>IF (ISNULL(shippingDuration__c), &quot;&quot;, IF (shippingDuration__c &gt; 4, IMAGE(&quot;/img/samples/light_red.gif&quot;,&quot;Red&quot;), IMAGE(&quot;/img/samples/light_green.gif&quot;, &quot;Green&quot;)))</formula>
    <label>Shipping Duration Status</label>
    <type>Text</type>
</CustomField>