force-app/main/default/objects/New_Customer_Implementation__c/listViews/CompletedOrders.listView-meta.xml
<ListView>
    <fullName>CompletedOrders</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>currentStage__c</columns>
    <columns>percentComplete__c</columns>
    <columns>contractRequestDate__c</columns>
    <columns>contractToShipStatus__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>currentStage__c</field>
        <operation>equals</operation>
        <value>6-First Message Received,7-Invoice Paid</value>
    </filters>
    <label>Completed Orders</label>
    <language>en_US</language>
</ListView>