force-app/main/default/objects/New_Customer_Implementation__c/listViews/InProcessOrders.listView-meta.xml
<ListView>
    <fullName>InProcessOrders</fullName>
    <booleanFilter>1</booleanFilter>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>currentStage__c</columns>
    <columns>percentComplete__c</columns>
    <columns>contractRequestDate__c</columns>
    <columns>contractToShipStatus__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>currentStage__c</field>
        <operation>notEqual</operation>
        <value>7-Invoice Paid,6-First Message Received</value>
    </filters>
    <label>In-Process Orders</label>
    <language>en_US</language>
</ListView>