force-app/main/default/objects/New_Customer_Implementation__c/listViews/x3OrderPending.listView-meta.xml
<ListView>
    <fullName>x3OrderPending</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>currentStage__c</columns>
    <columns>percentComplete__c</columns>
    <columns>contractRequestDate__c</columns>
    <columns>contractToShipStatus__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>currentStage__c</field>
        <operation>equals</operation>
        <value>3-Customer Fully Setup and Ready for Orders</value>
    </filters>
    <label>3-Order Pending</label>
    <language>en_US</language>
</ListView>