force-app/main/default/objects/New_Customer_Implementation__c/listViews/x5OrderFulfilledShipped.listView-meta.xml
<ListView>
    <fullName>x5OrderFulfilledShipped</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>currentStage__c</columns>
    <columns>percentComplete__c</columns>
    <columns>contractRequestDate__c</columns>
    <columns>contractToShipStatus__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>currentStage__c</field>
        <operation>equals</operation>
        <value>5-First Shipment Complete</value>
    </filters>
    <label>5-Order Fulfilled (Shipped)</label>
    <language>en_US</language>
</ListView>