force-app/main/default/objects/New_Customer_Implementation__c/listViews/x6FirstMessageReceived.listView-meta.xml
<ListView>
    <fullName>x6FirstMessageReceived</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>currentStage__c</columns>
    <columns>percentComplete__c</columns>
    <columns>contractRequestDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>currentStage__c</field>
        <operation>equals</operation>
        <value>6-First Message Received</value>
    </filters>
    <label>6-First Message Received</label>
    <language>en_US</language>
</ListView>