force-app/main/default/objects/New_Customer_Implementation__c/listViews/x7InvoicePaid.listView-meta.xml
<ListView>
    <fullName>x7InvoicePaid</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>currentStage__c</columns>
    <columns>percentComplete__c</columns>
    <columns>contractRequestDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>currentStage__c</field>
        <operation>equals</operation>
        <value>7-Invoice Paid</value>
    </filters>
    <label>7-Invoice Paid</label>
    <language>en_US</language>
</ListView>